# mapa-meteorologico

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt
.github/workflows/: fly.yaml
data/: dados_horarios_estacao_fortaleza-itaperi_obs_20190101_20240618.csv  dados_horarios_estacao_praia-futuro_obs_20190101_20240618.csv  ipece_com_info_cagece.csv  ipece_com_info_cagece_v2.csv  tabela_final_cogerh_4jul.csv
static/css/: base.css  map.css  marker_popup.css  searchbar.css
static/js/: contornoMunicipios.js  map-ol.js  map.js
templates/: base.html  epsg4674.html  filters_form.html  map-ol.html  map.html  map.j2  map2.j2  marker_popup.html  searchbar.html
