[tool.poetry]
name = "flaskmap"
version = "0.1.0"
description = ""
authors = ["Eduardo <eduardo.rodrigues@maxia.education>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
leaflet = "^0.0.3"
pandas = "^2.2.2"
WTForms = "^3.1.2"
Flask-WTF = "^1.2.1"
bootstrap-flask = "^2.4.0"
Flask-Datepicker = "^0.14"
flask_assets = "^2.1.0"
libsass = "^0.23.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
